// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toCSSVars > produces CSS custom properties matching snapshot 1`] = `
":root {
  --color-primary: #3b82f6;
  --color-secondary: #8b5cf6;
  --color-background: #ffffff;
  --color-text: #111827;
  --font-family: Inter, sans-serif;
  --font-size-base: 16px;
  --font-scale-ratio: 1.25;
  --spacing-base: 4px;
}"
`;

exports[`toJSON > produces valid JSON matching snapshot 1`] = `
"{
  "name": "test-theme",
  "colors": {
    "primary": "#3b82f6",
    "secondary": "#8b5cf6",
    "background": "#ffffff",
    "text": "#111827"
  },
  "typography": {
    "fontFamily": "Inter, sans-serif",
    "baseSizePx": 16,
    "scaleRatio": 1.25
  },
  "spacing": {
    "baseUnitPx": 4
  }
}"
`;

exports[`toTSObject > produces TS object export matching snapshot 1`] = `
"export const theme = {
  "name": "test-theme",
  "colors": {
    "primary": "#3b82f6",
    "secondary": "#8b5cf6",
    "background": "#ffffff",
    "text": "#111827"
  },
  "typography": {
    "fontFamily": "Inter, sans-serif",
    "baseSizePx": 16,
    "scaleRatio": 1.25
  },
  "spacing": {
    "baseUnitPx": 4
  }
} as const"
`;
